feat: implements exception handler