@@ -2,13 +2,15 @@ package com.example.authorizationservice.repository;
 
 import org.springframework.stereotype.Repository;
 
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.List;
 
 @Repository
 public class UserRepository {
     public List<Authorities> getUserAuthorities(String user, String password) {
-        // TODO
-        return Collections.singletonList(Authorities.READ);
+        if (user.equals("maksim") && password.equals("1234")) {
+            return Arrays.asList(Authorities.values());
+        }
+        return List.of();
     }
 }
